--- a/RiderProjects/MarryMeMarket/Views/Home/index.cshtml
+++ b/RiderProjects/MarryMeMarket/Views/Home/index.cshtml
@@ -7,8 +7,8 @@
 <div class="bgded overlay" style="background-image:url('@Url.Content("~/images/demo/backgrounds/01.png")');">
     <div id="pageintro" class="hoc clear"> 
         <article>
-            <h3 class="heading">Faucibus porttitor metus</h3>
-            <p>In nibh nullam egestas velit laoreet nullam elementum ipsum pharetra suscipit leo augue pretium felis nisl vitae ipsum curabitur quis libero.</p>
+            <h3 class="heading">MarryMe Market</h3>
+            <p>Your one stop shop for your dream weddings</p>
             <footer><a class="btn" href="#">Tristique vehicula</a></footer>
         </article>
     </div>
