made the index.cshtml and gallery.cshtml pretty-- the homepage and the gallery page. Also changed the _Layout.cshtml file so it would allow me to change the icons-- one line of code in the head

--- a/RiderProjects/MarryMeMarket/Views/Home/index.cshtml
+++ b/RiderProjects/MarryMeMarket/Views/Home/index.cshtml
@@ -4,12 +4,12 @@
 }
 
 <!-- Hero Section -->
-<div class="bgded overlay" style="background-image:url('@Url.Content("~/images/demo/backgrounds/01.png")');">
+<div class="bgded overlay" style="background-image:url('@Url.Content("~/images/demo/backgrounds/flower_arch_bg.webp")');">
     <div id="pageintro" class="hoc clear"> 
         <article>
             <h3 class="heading">MarryMe Market</h3>
             <p>Your one stop shop for your dream weddings</p>
-            <footer><a class="btn" href="#">Tristique vehicula</a></footer>
+            <footer><a class="btn" href="#">Get Started!</a></footer>
         </article>
     </div>
 </div>
@@ -20,38 +20,34 @@
         <section id="introblocks">
             <ul class="nospace group btmspace-80 elements elements-four">
                 <li class="one_quarter">
-                    <article><a href="#"><i class="fas fa-hand-rock"></i></a>
-                        <h6 class="heading">Feugiat fermentum</h6>
-                        <p>Ac orci proin porttitor lacus eget mi pellentesque non.</p>
+                    <article><a href="#"><i class="fas fa-heart"></i></a>
+                        <h6 class="heading">Wedding Dresses</h6>
                     </article>
                 </li>
                 <li class="one_quarter">
                     <article><a href="#"><i class="fas fa-dove"></i></a>
-                        <h6 class="heading">Malesuada accumsan</h6>
-                        <p>Sapien sed metus congue sodales vivamus scelerisque.</p>
+                        <h6 class="heading">Wedding Venues</h6>
                     </article>
                 </li>
                 <li class="one_quarter">
-                    <article><a href="#"><i class="fas fa-history"></i></a>
-                        <h6 class="heading">Mauris placerat</h6>
-                        <p>Et interdum vulputate purus nisl fringilla sapien quis.</p>
+                    <article><a href="#"><i class="fas fa-gift"></i></a>
+                        <h6 class="heading">Wedding Decor</h6>
                     </article>
                 </li>
                 <li class="one_quarter">
-                    <article><a href="#"><i class="fas fa-heartbeat"></i></a>
-                        <h6 class="heading">Elementum rhoncus</h6>
-                        <p>Sollicitudin dui mauris dui nunc lorem tortor pharetra.</p>
+                    <article><a href="#"><i class="fas fa-gem"></i></a>
+                        <h6 class="heading">Misc Wedding Items</h6>
                     </article>
                 </li>
             </ul>
         </section>
 
         <section class="group shout">
-            <figure class="one_half first"><img src="/images/demo/546x356.png" alt="">
-                <figcaption class="heading"><a href="#">Accumsan placerat</a></figcaption>
+            <figure class="one_half first"><img src="/images/demo/testimonial_1.png" alt="">
+                <figcaption class="heading"><a href="#">Testimonial</a></figcaption>
             </figure>
-            <figure class="one_half"><img src="/images/demo/546x356.png" alt="">
-                <figcaption class="heading"><a href="#">Scelerisque etiam</a></figcaption>
+            <figure class="one_half"><img src="/images/demo/testimonial_2.png" alt="">
+                <figcaption class="heading"><a href="#">Testimonial</a></figcaption>
             </figure>
         </section>
     </main>
@@ -60,27 +56,27 @@
 <!-- Services Section -->
 <div class="bgded overlay light" style="background-image:url('@Url.Content("~/images/demo/backgrounds/01.png")');">
     <section id="services" class="hoc container clear">
-        <div class="sectiontitle">
-            <p class="nospace font-xs">Quis leo hendrerit lectus morbi</p>
-            <h6 class="heading font-x2">Justo mauris tempus pharetra</h6>
-        </div>
+        @* <div class="sectiontitle"> *@
+        @*     <p class="nospace font-xs">Quis leo hendrerit lectus morbi</p> *@
+        @*     <h6 class="heading font-x2">Justo mauris tempus pharetra</h6> *@
+        @* </div> *@
         <ul class="nospace group elements elements-three">
             <li class="one_third">
-                <article><a href="#"><i class="fas fa-hourglass-half"></i></a>
-                    <h6 class="heading">Sociis natoque penatibus</h6>
-                    <p>Interdum at congue semper purus nullam quis odio id justo.</p>
+                <article><a href="#"><i class="fas fa-ring"></i></a>
+                    <h6 class="heading">Our Story</h6>
+                    <p>Get to know us and how we got started!</p>
                 </article>
             </li>
             <li class="one_third">
-                <article><a href="#"><i class="fas fa-paw"></i></a>
-                    <h6 class="heading">Magnis parturient montes</h6>
-                    <p>Urna proin venenatis eros viverra ultrices fringilla lectus.</p>
+                <article><a href="#"><i class="fas fa-glass-cheers"></i></a>
+                    <h6 class="heading">Frequently Asked Questions</h6>
+                    <p>Get answers to what you might be curious about.</p>
                 </article>
             </li>
             <li class="one_third">
-                <article><a href="#"><i class="fas fa-sliders-h"></i></a>
-                    <h6 class="heading">Nascetur ridiculus aenean</h6>
-                    <p>Vitae ipsum vitae velit porttitor aliquam in quam aliquam.</p>
+                <article><a href="#"><i class="fas fa-kiss-wink-heart"></i></a>
+                    <h6 class="heading">Contract and Policies</h6>
+                    <p>How does the legal stuff all work for you and us?</p>
                 </article>
             </li>
         </ul>
