--- a/RiderProjects/MarryMeMarket/Views/Shared/_Layout.cshtml
+++ b/RiderProjects/MarryMeMarket/Views/Shared/_Layout.cshtml
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="~/css/layout.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/framework.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/MarryMeMarket.styles.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
 
     <!-- FontAwesome for Icons -->
     <link rel="stylesheet" href="~/fonts/fontawesome-free/css/fontawesome-all.min.css" asp-append-version="true"/>
