--- a/RiderProjects/MarryMeMarket/Views/Home/gallery.cshtml
+++ b/RiderProjects/MarryMeMarket/Views/Home/gallery.cshtml
@@ -4,12 +4,12 @@
 }
 
 <!-- Hero Section -->
-<div class="bgded overlay" style="background-image: url('@Url.Content("~/images/demo/backgrounds/01.png")');">
+<div class="bgded overlay" style="background-image: url('@Url.Content("~/images/demo/backgrounds/aisle_chairs_bg.jpg")');">
     <div id="breadcrumb" class="hoc clear"> 
-        <ul>
-            <li><a>spaceholder</a></li>
-            
-        </ul>
+        @* <ul> *@
+        @*     <li><a>spaceholder</a></li> *@
+        @*      *@
+        @* </ul> *@
     </div>
 </div>
 
@@ -19,22 +19,22 @@
         <div class="content"> 
             <div id="gallery">
                 <figure>
-                    <header class="heading">Gallery Title Goes Here</header>
+                    <header class="heading">Our Gallery</header>
                     <ul class="nospace clear">
-                        <li class="one_quarter first"><a href="#"><img src="/images/demo/gallery/01.png" alt=""></a></li>
-                        <li class="one_quarter"><a href="#"><img src="/images/demo/gallery/01.png" alt=""></a></li>
-                        <li class="one_quarter"><a href="#"><img src="/images/demo/gallery/01.png" alt=""></a></li>
-                        <li class="one_quarter"><a href="#"><img src="/images/demo/gallery/01.png" alt=""></a></li>
-                        <li class="one_quarter first"><a href="#"><img src="/images/demo/gallery/01.png" alt=""></a></li>
-                        <li class="one_quarter"><a href="#"><img src="/images/demo/gallery/01.png" alt=""></a></li>
-                        <li class="one_quarter"><a href="#"><img src="/images/demo/gallery/01.png" alt=""></a></li>
-                        <li class="one_quarter"><a href="#"><img src="/images/demo/gallery/01.png" alt=""></a></li>
-                        <li class="one_quarter first"><a href="#"><img src="/images/demo/gallery/01.png" alt=""></a></li>
-                        <li class="one_quarter"><a href="#"><img src="/images/demo/gallery/01.png" alt=""></a></li>
-                        <li class="one_quarter"><a href="#"><img src="/images/demo/gallery/01.png" alt=""></a></li>
-                        <li class="one_quarter"><a href="#"><img src="/images/demo/gallery/01.png" alt=""></a></li>
+                        <li class="one_quarter first"><a href="#"><img src="/images/demo/gallery/dress/dress_1.png" alt=""></a></li>
+                        <li class="one_quarter"><a href="#"><img src="/images/demo/gallery/dress/dress_2.png" alt=""></a></li>
+                        <li class="one_quarter"><a href="#"><img src="/images/demo/gallery/dress/dress_3.png" alt=""></a></li>
+                        <li class="one_quarter"><a href="#"><img src="/images/demo/gallery/venue/venue_1.png" alt=""></a></li>
+                        <li class="one_quarter first"><a href="#"><img src="/images/demo/gallery/venue/venue_2.png" alt=""></a></li>
+                        <li class="one_quarter"><a href="#"><img src="/images/demo/gallery/venue/venue_3.png" alt=""></a></li>
+                        <li class="one_quarter"><a href="#"><img src="/images/demo/gallery/decor/mr_mrs_chair.png" alt=""></a></li>
+                        <li class="one_quarter"><a href="#"><img src="/images/demo/gallery/decor/candlestick.png" alt=""></a></li>
+                        <li class="one_quarter first"><a href="#"><img src="/images/demo/gallery/decor/edison_lights.png" alt=""></a></li>
+                        <li class="one_quarter"><a href="#"><img src="/images/demo/gallery/decor/arch.png" alt=""></a></li>
+                        <li class="one_quarter"><a href="#"><img src="/images/demo/gallery/decor/flower_bouquet.png" alt=""></a></li>
+                        <li class="one_quarter"><a href="#"><img src="/images/demo/gallery/decor/mason_jars.png" alt=""></a></li>
                     </ul>
-                    <figcaption>Gallery Description Goes Here</figcaption>
+                    @* <figcaption>Gallery Description Goes Here</figcaption> *@
                 </figure>
             </div>
 
@@ -62,20 +62,20 @@
 <!-- Contact Section -->
 <div class="wrapper row2">
     <section id="ctdetails" class="hoc container clear"> 
-        <div class="sectiontitle">
-            <p class="nospace font-xs">Enim eleifend dignissim bibendum</p>
-            <h6 class="heading font-x2">Id tristique id metus nulla</h6>
-        </div>
+        @* <div class="sectiontitle"> *@
+        @*     <p class="nospace font-xs">Enim eleifend dignissim bibendum</p> *@
+        @*     <h6 class="heading font-x2">Id tristique id metus nulla</h6> *@
+        @* </div> *@
         <figure class="one_half first">
             <ul class="nospace clear">
-                <li class="block clear"><a href="#"><i class="fas fa-phone"></i></a> <span><strong>Call us:</strong> +00 (123) 456 7890</span></li>
-                <li class="block clear"><a href="#"><i class="fas fa-envelope"></i></a> <span><strong>Email:</strong> support@domain.com</span></li>
-                <li class="block clear"><a href="#"><i class="fas fa-map-marker-alt"></i></a> <span><strong>Visit us:</strong> <a href="#">Our location</a></span></li>
+                <li class="block clear"><a href="#"><i class="fas fa-phone"></i></a> <span><strong>Call us:</strong> +1 (801) 555 5555</span></li>
+                <li class="block clear"><a href="#"><i class="fas fa-envelope"></i></a> <span><strong>Email:</strong> MarryMeMarket@gmail.com</span></li>
+                <li class="block clear"><a href="#"><i class="fas fa-map-marker-alt"></i></a> <span><strong>Visit us:</strong> <a href="#">Provo, UT</a></span></li>
             </ul>
         </figure>
         <article class="one_half">
-            <h6 class="heading">Purus nullam arcu integer</h6>
-            <p class="nospace btmspace-15">Elementum nisi ac volutpat vestibulum enim mi tincidunt eros.</p>
+            <h6 class="heading">Subscribe to get most recent deals!</h6>
+            <p class="nospace btmspace-15">New rentals and deals sent directly to you so you can get them first.</p>
             <form action="#" method="post">
                 <fieldset>
                     <legend>Newsletter:</legend>
