fix a couple styling issues, finish building form model for database, finish creating form for sellers to register, style form

--- a/RiderProjects/MarryMeMarket/Views/Shared/_Layout.cshtml
+++ b/RiderProjects/MarryMeMarket/Views/Shared/_Layout.cshtml
@@ -53,14 +53,14 @@
 </header>
 
 <!-- Main Page Content -->
-<div class="container">
+<div class="container ">
     <main role="main" class="pb-3">
         @RenderBody()
     </main>
 </div>
 
 <!-- Footer -->
-<footer class="border-top footer text-muted text-center py-3">
+<footer class=" footer text-muted text-center py-3 mt-5 pt-5">
     <div class="container">
         &copy; @DateTime.Now.Year - MarryMeMarket - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
     </div>
