added description to landing page

--- a/RiderProjects/MarryMeMarket/Views/Home/index.cshtml
+++ b/RiderProjects/MarryMeMarket/Views/Home/index.cshtml
@@ -8,7 +8,8 @@
     <div id="pageintro" class="hoc clear"> 
         <article>
             <h3 class="heading">MarryMe Market</h3>
-            <p>Your one stop shop for your dream weddings</p>
+            <p>Your one stop shop for your dream weddings. Here at MarryMe Market we believe everyone should be able to afford their dream wedding.
+                We make it possible for people to rent out their stored away wedding supplies to those trying to craft their perfect wedding.</p>
             <footer><a class="btn" href="#">Get Started!</a></footer>
         </article>
     </div>
